--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.0.4",
