--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "mongoose": "^8.0.3",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^2.2.1",
