Fix CORS and production signup issue

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,6 +1,10 @@
 # Server Configuration
 PORT=5000
-CLIENT_URL=http://localhost:5173
+NODE_ENV=development
+
+# Frontend URL for CORS (REQUIRED for production)
+# Set this to your deployed frontend URL
+CLIENT_URL=https://e-commerce-website-1-s5o9.onrender.com
 
 # MongoDB Atlas Connection (REQUIRED)
 # Format: mongodb+srv://<username>:<password>@<cluster>.mongodb.net/<database_name>
